--- a/package.json
+++ b/package.json
@@ -6,9 +6,14 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^5.12.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-modal": "^3.16.1",
     "react-scripts": "5.0.1",
+    "react-svg-pan-zoom": "^3.12.1",
+    "react-tooltip": "^5.25.0",
+    "turkey-map-react": "^1.2.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
